Dodajanje stilov spletne strani

--- a/stroboskop.html
+++ b/stroboskop.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>..:: Stroboskop ::..</title>
+    <link rel="stylesheet" type="text/css" href="stili.css">
     <meta charset="UTF-8">
     
     <script src="skripta.js"></script>
